--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Weather Report
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
+  - cron: "0 * * * *"
 
 permissions:
   contents: write
